Intento de implementación de API REST
Primeros pasos con la impremetación de la api rest en la APP

--- a/HolaMundo/www/mapa.html
+++ b/HolaMundo/www/mapa.html
@@ -52,7 +52,8 @@
         </div>
     </header>
     <div id="map"></div>
-    
+
+    <script src="scripts/coockies.js"></script>
     <script src="scripts/bd.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAppFMUDP76wmOz3ZHQBoPzmRTNIBAEEJw&callback=initMap"></script>
     <!-- Referencia de Cordova que se agrega a la aplicación cuando se compila. -->
@@ -63,5 +64,6 @@
     <script src="scripts/platformOverrides.js"></script>
     <script src="scripts/index.js"></script>
     <script src="scripts/bootstrap-select.min.js"></script>
+    
 </body>
 </html>
