--- a/HolaMundo/www/index.html
+++ b/HolaMundo/www/index.html
@@ -6,9 +6,9 @@
     <title>Inicio - Práctica DISM</title>
     <link rel="stylesheet" href="https://bootswatch.com/paper/bootstrap.min.css" />
     <link href="css/main.css" rel="stylesheet" />
-    
+    <link rel="stylesheet" href="css/switch.css" />
 </head>
-<body onload="startDB();">
+<body onload="startDB(false);">
     
     <div class="container">
         <div class="row">
@@ -20,14 +20,37 @@
                 <a href="BDEstacionesLectoras.html" class="btn btn-info btn-lg btn-block">Estaciones Lectoras</a>
                 <a href="BDLecturas.html" class="btn btn-warning btn-lg btn-block">Lecturas</a>
                 <a href="about.html" class="btn btn-success btn-lg btn-block">Acerca de</a>
+                <br />
+                <p style="display:inline-table;">API REST</p>
+                <div class="onoffswitch">
+                    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
+                    <label class="onoffswitch-label" for="myonoffswitch"></label>
+                </div>
             </div>
         </div>
     </div>
-    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-    <script src="scripts/acelerometro.js"></script>
-    <script src="scripts/bd.js"></script>
-    <script src="scripts/jquery-2.1.4.min.js" ></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="scripts/platformOverrides.js"></script>
+    <footer>
+
+        <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+        <script src="scripts/acelerometro.js"></script>
+        <script src="scripts/bd.js"></script>
+        <script src="scripts/jquery-2.1.4.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+        <script src="scripts/platformOverrides.js"></script>
+        <script src="scripts/coockies.js"></script>
+        <script>
+            $('#myonoffswitch').click(function () {
+                if ($('#myonoffswitch').is(":checked")) {
+                    setCookie("API", "REST", 30);
+                } else {
+                    setCookie("API", "", -1000);
+                }
+            });
+            if (!checkCookie()) {
+                $("#myonoffswitch").prop("checked", false);
+            }
+        </script>
+    </footer>
+   
 </body>
 </html>
