CRUD Estaciones terminado
Terminado el CRUD de estaciones lectoras usando la API REST.

--- a/HolaMundo/www/BDEstacionesLectoras.html
+++ b/HolaMundo/www/BDEstacionesLectoras.html
@@ -79,14 +79,19 @@
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAppFMUDP76wmOz3ZHQBoPzmRTNIBAEEJw&callback=initMap">
     </script>
+    <script src="scripts/coockies.js"></script>
     <script src="scripts/jquery-2.1.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="scripts/platformOverrides.js"></script>
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script src="scripts/bd.js"></script>
     <script type="text/javascript">
-        startDB(false);
-        printEstaciones();
+        if (checkCookie() == false) {
+            startDB(false);
+            printEstaciones();
+        } else {
+            getDataFromApiRest(false,"EstacionesLectoras");
+        }
     </script>
     <script src="scripts/formularioEstaciones.js"></script>
     <script src="scripts/sweetalert.min.js"></script>
