--- a/HolaMundo/www/about.html
+++ b/HolaMundo/www/about.html
@@ -34,7 +34,9 @@
         <ul class="list-group">
             <li class="list-group-item">Bootstrap v3.3.5 (CC BY 3.0)</li>
             <li class="list-group-item">JQuery 2.1.4</li>
-            <li class="list-group-item">Bootswatch (paper)</li>
+            <li class="list-group-item">Bootswatch (Paper)</li>
+            <li class="list-group-item">MongoDB</li>
+            <li class="list-group-item">Node.js</li>
         </ul>
         <h4>Práctica DISM - Antonio Rebollo Berná</h4>
         <h5>Ingeniería multimedia</h5>
