--- a/HolaMundo/www/mapa.html
+++ b/HolaMundo/www/mapa.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
-    <title>Rutas</title>
+    <title>Mapa</title>
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="https://bootswatch.com/paper/bootstrap.min.css" />
     <link rel="stylesheet" href="css/bootstrap-select.min.css" />
